[gd_scene load_steps=10 format=3 uid="uid://yrv8myggdj1h"]

[ext_resource type="Script" path="res://Game.gd" id="1_3r2fk"]
[ext_resource type="Script" path="res://SpellList.gd" id="2_cadle"]
[ext_resource type="FontFile" uid="uid://b2eeuc8u1hno5" path="res://resources/fonts/LibertinusMono-Regular.woff2" id="2_oflhb"]
[ext_resource type="Script" path="res://TurnReport.gd" id="3_dgo7r"]
[ext_resource type="Script" path="res://WizardList.gd" id="3_laiom"]
[ext_resource type="Script" path="res://EffectControlPanel.gd" id="5_8i5um"]
[ext_resource type="Script" path="res://SummonControlPanel.gd" id="5_p744m"]
[ext_resource type="Script" path="res://SpellInfoTab.gd" id="8_80j1a"]

[sub_resource type="Theme" id="Theme_t54r2"]
default_font = ExtResource("2_oflhb")

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3r2fk")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0196078, 0.0862745, 0.313726, 1)

[node name="Scroll" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_t54r2")

[node name="UI" type="Control" parent="Scroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpellZone" type="VBoxContainer" parent="Scroll/UI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0

[node name="SpellInfoTab" type="RichTextLabel" parent="Scroll/UI/SpellZone" groups=["spellInfoTab"]]
visible = false
layout_mode = 2
size_flags_vertical = 0
bbcode_enabled = true
fit_content = true
scroll_active = false
script = ExtResource("8_80j1a")

[node name="SpellScroll" type="ScrollContainer" parent="Scroll/UI/SpellZone"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
vertical_scroll_mode = 2

[node name="TabContainer" type="TabContainer" parent="Scroll/UI/SpellZone/SpellScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tab_alignment = 1
current_tab = 1

[node name="Rules" type="RichTextLabel" parent="Scroll/UI/SpellZone/SpellScroll/TabContainer"]
layout_mode = 2

[node name="Spell List" type="ItemList" parent="Scroll/UI/SpellZone/SpellScroll/TabContainer" groups=["spellList"]]
layout_mode = 2
size_flags_horizontal = 3
auto_height = true
script = ExtResource("2_cadle")

[node name="MainColumn" type="VBoxContainer" parent="Scroll/UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TurnPanel" type="Control" parent="Scroll/UI/MainColumn"]
custom_minimum_size = Vector2(0, 400)
layout_direction = 3
layout_mode = 2

[node name="TurnReport" type="RichTextLabel" parent="Scroll/UI/MainColumn/TurnPanel" groups=["turnReport"]]
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
scroll_following = true
script = ExtResource("3_dgo7r")

[node name="WizardList" type="RichTextLabel" parent="Scroll/UI/MainColumn" groups=["wizardList"]]
layout_mode = 2
fit_content = true
script = ExtResource("3_laiom")

[node name="RightHand" type="HBoxContainer" parent="Scroll/UI/MainColumn" groups=["rightHand"]]
layout_mode = 2

[node name="Label" type="Label" parent="Scroll/UI/MainColumn/RightHand"]
layout_mode = 2
text = "Right Hand:"

[node name="RightHandGestureOptions" type="OptionButton" parent="Scroll/UI/MainColumn/RightHand" groups=["buttons", "rightGesture"]]
layout_mode = 2

[node name="RightHandSpellOptions" type="OptionButton" parent="Scroll/UI/MainColumn/RightHand" groups=["buttons", "rightSpell"]]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="RightHandTargetingOptions" type="OptionButton" parent="Scroll/UI/MainColumn/RightHand" groups=["buttons", "rightTarget"]]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="LeftHand" type="HBoxContainer" parent="Scroll/UI/MainColumn" groups=["leftHand"]]
layout_mode = 2

[node name="Label" type="Label" parent="Scroll/UI/MainColumn/LeftHand"]
layout_mode = 2
text = "Left Hand: "

[node name="LeftHandGestureOptions" type="OptionButton" parent="Scroll/UI/MainColumn/LeftHand" groups=["buttons", "leftGesture"]]
layout_mode = 2

[node name="LeftHandSpellOptions" type="OptionButton" parent="Scroll/UI/MainColumn/LeftHand" groups=["buttons", "leftSpell"]]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="LeftHandTargetingOptions" type="OptionButton" parent="Scroll/UI/MainColumn/LeftHand" groups=["buttons", "leftTarget"]]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="DefaultHostileTargetPanel" type="HBoxContainer" parent="Scroll/UI/MainColumn"]
layout_mode = 2

[node name="Label" type="Label" parent="Scroll/UI/MainColumn/DefaultHostileTargetPanel"]
layout_mode = 2
text = "Set default hostile target: "

[node name="DefaultHostileTargetOptions" type="OptionButton" parent="Scroll/UI/MainColumn/DefaultHostileTargetPanel" groups=["buttons", "defaultHostileTarget"]]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="EffectControlPanel" type="VBoxContainer" parent="Scroll/UI/MainColumn" groups=["effectControlPanel"]]
layout_mode = 2
script = ExtResource("5_8i5um")

[node name="SummonControlPanel" type="VBoxContainer" parent="Scroll/UI/MainColumn" groups=["summonControlPanel"]]
layout_mode = 2
script = ExtResource("5_p744m")

[node name="EndTurnButton" type="Button" parent="Scroll/UI/MainColumn" groups=["buttons", "endTurnButton"]]
custom_minimum_size = Vector2(560, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Submit Turn"

[connection signal="item_selected" from="Scroll/UI/MainColumn/RightHand/RightHandGestureOptions" to="." method="_on_right_hand_gesture_options_item_selected"]
[connection signal="item_selected" from="Scroll/UI/MainColumn/RightHand/RightHandSpellOptions" to="." method="_on_right_hand_spell_options_item_selected"]
[connection signal="item_selected" from="Scroll/UI/MainColumn/RightHand/RightHandTargetingOptions" to="." method="_on_right_hand_targeting_options_item_selected"]
[connection signal="item_selected" from="Scroll/UI/MainColumn/LeftHand/LeftHandGestureOptions" to="." method="_on_left_hand_gesture_options_item_selected"]
[connection signal="item_selected" from="Scroll/UI/MainColumn/LeftHand/LeftHandSpellOptions" to="." method="_on_left_hand_spell_options_item_selected"]
[connection signal="item_selected" from="Scroll/UI/MainColumn/LeftHand/LeftHandTargetingOptions" to="." method="_on_left_hand_targeting_options_item_selected"]
[connection signal="requestValidTargets" from="Scroll/UI/MainColumn/SummonControlPanel" to="." method="_on_summon_control_panel_request_valid_targets"]
[connection signal="pressed" from="Scroll/UI/MainColumn/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
